--- a/mike's stuff/Pixie/Base.lproj/Main.storyboard
+++ b/mike's stuff/Pixie/Base.lproj/Main.storyboard
@@ -1105,7 +1105,7 @@
         <image name="menu" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="rDY-9Y-l7X"/>
+        <segue reference="ndH-hG-Xoc"/>
         <segue reference="4fw-gx-Jei"/>
     </inferredMetricsTieBreakers>
 </document>
